unified_tests/file_roles/type_declaration_in_manifest_file/expect/build.text.stderr
PACKAGE.copp:1:6: error: PACKAGE.copp may only contain exports declarations
  type Token :: struct {
       ^
